On the limited time that I was given to me, I couldn't make the mockup exactly the way I wanted using HTML and CSS. There are some things I need to learn more in HTML and CSS. One thing I need to work on to make the flexboxes in HTML and CSS. While working on this assignment I couldn't get the flexbox to work. The alignment of the boxes didn't match up to the image.  Also somewhere in my code the number 42 wasn't bolded correctly and I couldn't figure out why it's highlighted. After working on this assignment, I notice there are some holes in my knowledge of HTML  and CSS. Moving forward I will continue to improve my knowledge and work on my weaknesses.

--- a/html-and-css-prototype/CSS/stylesheet.css
+++ b/html-and-css-prototype/CSS/stylesheet.css
@@ -40,3 +40,55 @@ h1 {
 */
 
 /* Your CSS code goes here */
+.container {
+	margin: 2em auto;
+	max-width: 630px;
+	text-align: center;
+}
+h1 {
+	font-family:  "rooney-sans", Avenir-Book, Calibri, sans-serif;
+	font-size:1.5em;
+	background-color: #777;
+	color: white;
+  	height: 50px;
+  	text-align: center;
+}
+
+mark.red {
+    color:#ff0000;
+    background: none;
+}
+
+mark.black {
+    color:black;
+    background: none;
+}
+h2 {
+	font-family: "rooney-sans", Avenir-Book, Calibri, sans-serif;
+	color: #424242;
+	line-height: 1.0;
+	margin: 20px;
+}
+
+mark.number{
+	font-weight: bold;
+}
+h3 {
+  	font-family: "rooney-sans", Avenir-Book, Calibri, sans-serif;
+	color: #424242;
+	line-height: 1;
+  	margin: 20px;
+}
+h4 {
+	font-family: "rooney-sans", Avenir-Book, Calibri, sans-serif;
+	color: #424242;
+	line-height: 1.4;
+	color: blue;
+  	font-style:italic;
+  	margin: 20px;
+}
+* {
+	box-sizing: border-box;
+	margin: 1000 px;
+	padding: 100 px;
+}
